# gitbox

./: README.md  index.html  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: gitbox.rs  lib.rs  main.rs
src-tauri/src/gitbox/: changes_commit.rs  git_errors.rs  git_helpers.rs  history_refs.rs  operations_conflicts.rs  remote.rs  repo_project.rs  storage.rs  tests.rs  types.rs
src/components/: AppTopbar.vue  DiffViewer.vue  ProjectPane.vue  WorkbenchRail.vue
src/components/icons/: CommitIcon.vue  VcsIcon.vue
src/composables/: useDiffRows.ts  useGitboxApp.ts  useLogFileTree.ts  useLogGraph.ts
src/lib/: gitboxCommands.ts
src/stores/: advanced.ts  branches.ts  changelists.ts  changes.ts  commit.ts  diff.ts  history.ts  operations.ts  project.ts  remote.ts  repositories.ts  settings.ts
src/styles/: app.css
src/types/: gitbox.ts
