[package]
name = "gitbox"
version = "0.1.0"
description = "A desktop Git client inspired by JetBrains Git workflows"
authors = ["ncc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gitbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20.4"
rusqlite = { version = "0.39.0", features = ["bundled"] }
thiserror = "2.0.18"
tempfile = "3.27.0"
tauri-plugin-dialog = "2.7.1"
